# hand_tracking_toolkit

./: .gitignore  CONTRIBUTING.md  README.md  affine.py  camera.py  camera_distortion.py  dataset.py  metrics.py  pyproject.toml  submissions.py  visualization.py
.github/workflows/: python-app.yml
hand_tracking_toolkit/: __init__.py  affine.py  camera.py  camera_distortion.py  dataset.py  evaluation.py  mano_layer.py  math_utils.py  metrics.py  rasterizer.py  submissions.py  transform3d.py  visualization.py
hand_tracking_toolkit/hand_models/: mano_hand_model.py  umetrack_hand_model.py  umetrack_skinning.py
scripts/: evaluation.py  run_evaluation.py  write_annotations_files.py  write_test_annotations_files.py
tests/: test_forward_kinematics.py  test_read_dataset.py  test_visualization.py  test_write_submission_files.py
