[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hand_tracking_toolkit"
version = "0.1"
dependencies = [
    "numpy",
    "scipy",
    "typing_extensions",
    "torch",
]
requires-python = ">=3.8"
authors = [
  {name = "Yann Labbe", email = "ylabbe@meta.com"},
  {name = "Linguang Zhang", email = "linguang@meta.com"},
  {name = "Abhay Mittal", email = "abhayml@meta.com"},
  {name = "Weiguang Si", email = "weiguang@meta.com"},
  {name = "Shreyas Hampali", email = "hampali@meta.com"},
]
maintainers = [
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
